@@ -205,10 +205,11 @@ export("+.section",
        read.sealevel,
        read.section,
        rescale,
+       resizableLabel,
        retime,
        roll,
        "roll<-",
-       resizableLabel,
+       runderiv,
        salinity,
        "salinity<-",
        secondsToCtime,
